--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -15,8 +15,8 @@ $color__link-hover: #24c48a;
 $color__text-main: #626262;
 
 $color__border-button: #dadada;
-$color__border-button-hover: #626262;
-$color__border-button-focus: #626262;
+$color__border-button-hover: #24c48a;
+$color__border-button-focus: #24c48a;
 $color__border-input: #dadada;
 $color__border-abbr: #626262;
 
