--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -10,14 +10,18 @@ input[type="submit"] {
 	@include font-size(0.8666);
 	line-height: 1;
 	padding: 1em 1.923em;
+	@include transition(0.085s);
 	text-transform: uppercase;
 
 	&:hover {
+		background: $color__background-button;
 		border-color: $color__border-button-hover;
+		color: $color__link; 
 	}
 
 	&:active,
 	&:focus {
 		border-color: $color__border-button-focus;
+		color: $color__link; 
 	}
 }
