--- a/sass/forms/_fields.scss
+++ b/sass/forms/_fields.scss
@@ -41,10 +41,11 @@ input[type="time"],
 input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"] {
-	padding: 3px;
+	@include font-size(0.9333);
+	padding: .43em 1.7857em;
 }
 
 textarea {
-	padding-left: 3px;
+	padding: 0.9285em 1.7857em;
 	width: 100%;
 }
