--- a/sass/site/primary/_masthead.scss
+++ b/sass/site/primary/_masthead.scss
@@ -1,14 +1,12 @@
 #masthead {
-	width: $size__site-main;
 	border-bottom: 1px solid $color__background-hr-dark;
-	margin-bottom: 60px; 
 
 	.top-bar {
-		border-bottom: 1px solid $color__background-hr-dark;
-		height: 60px;
-		@include clearfix;
-		position: relative;
 		background: #fff;
+		border-bottom: 1px solid $color__background-hr-dark;
+		@include clearfix;
+		height: 60px;
+		position: relative;
 		z-index: 9999;
 	}
 
@@ -17,7 +15,7 @@
 	}
 
 	.site-branding {
-		margin: 60px 0;
+		padding: 4em 0;
 
 		.site-title {
 			font-family: $font__details; 
@@ -29,8 +27,8 @@
 			text-transform: uppercase;
 			
 			a {
-				text-decoration: none;
 				color: inherit;
+				text-decoration: none;
 			}
 		}
 
