--- a/style.css
+++ b/style.css
@@ -946,7 +946,7 @@ a {
   margin: 0 22.98246% 0 0; }
 
 .site-content {
-  margin-bottom: 75px; }
+  padding: 4em 0 5em; }
   .site-content::after {
     clear: both;
     content: "";
@@ -1010,14 +1010,12 @@ a {
 ## Site Masthead
 --------------------------------------------------------------*/
 #masthead {
-  width: 100%;
-  border-bottom: 1px solid #ebebeb;
-  margin-bottom: 60px; }
+  border-bottom: 1px solid #ebebeb; }
   #masthead .top-bar {
+    background: #fff;
     border-bottom: 1px solid #ebebeb;
     height: 60px;
     position: relative;
-    background: #fff;
     z-index: 9999; }
     #masthead .top-bar::after {
       clear: both;
@@ -1026,7 +1024,7 @@ a {
   #masthead .top-bar-sentinel {
     box-sizing: border-box; }
   #masthead .site-branding {
-    margin: 60px 0; }
+    padding: 4em 0; }
     #masthead .site-branding .site-title {
       font-family: "Lato", sans-serif;
       font-weight: 300;
@@ -1037,8 +1035,8 @@ a {
       text-align: center;
       text-transform: uppercase; }
       #masthead .site-branding .site-title a {
-        text-decoration: none;
-        color: inherit; }
+        color: inherit;
+        text-decoration: none; }
     #masthead .site-branding .site-description {
       text-align: center; }
 
@@ -1130,20 +1128,21 @@ a {
   margin: 0 0 1.5em; }
 
 .page-title {
+  font-family: "Lato", sans-serif;
+  font-size: 13.8656px;
+  font-size: 0.8666rem;
   text-align: center;
-  font-size: 1em;
-  text-transform: uppercase;
-  color: #2d2d2d; }
+  text-transform: uppercase; }
 
 .page-title-text {
   padding: 10px 0;
-  border-top: 2px solid #dadada;
-  border-bottom: 2px solid #dadada; }
+  border-top: 2px solid #ebebeb;
+  border-bottom: 2px solid #ebebeb; }
 
 .page-header {
-  padding: 70px 0;
-  margin-bottom: 55px;
-  border-bottom: 2px solid #ebebeb; }
+  border-bottom: 2px solid #f4f4f4;
+  margin-bottom: 5.3333em;
+  padding-bottom: 4em; }
 
 .entry-meta {
   display: -webkit-box;
