Added post loops and update search results

--- a/sass/layout/_content-sidebar.scss
+++ b/sass/layout/_content-sidebar.scss
@@ -16,7 +16,7 @@
 .site-content .widget-area {
 	float: right;
 	overflow: hidden;
-	padding-left: 30px;
+	padding-left: 2em;
 	width: $size__site-sidebar;
 }
 
