--- a/style.css
+++ b/style.css
@@ -1160,6 +1160,7 @@ a {
   -o-justify-content: center;
   justify-content: center;
   -ms-flex-pack: center;
+  letter-spacing: .1em;
   line-height: normal;
   text-align: center;
   text-transform: uppercase; }
@@ -1168,7 +1169,8 @@ a {
     font-size: 12.8px;
     font-size: 0.8rem; }
     .entry-meta span:not(:last-child):after {
-      content: '\00a0\00a0/\00a0\00a0'; }
+      content: '\00a0\00a0/\00a0\00a0';
+      padding: 0 .4166em; }
     .entry-meta span a {
       color: inherit;
       text-decoration: none; }
