--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -289,6 +289,10 @@
 }
 
 /*--------------------------------------------------------------
+# Search Results
+--------------------------------------------------------------*/
+
+/*--------------------------------------------------------------
 # Post Loop: Left Medium Thumbnail
 --------------------------------------------------------------*/
 .left-medium-loop {
