--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -27,3 +27,5 @@ $color__text-dark: #2d2d2d;
 
 $color__primary-accent: #24c48a;
 $color__primary-accent-dark: #21af7b;
+
+$color__borders: #f4f4f4;
