--- a/sass/woocommerce/_elements.scss
+++ b/sass/woocommerce/_elements.scss
@@ -8,7 +8,11 @@
 			width: 2em;
 			float: left;
 			height: 26px;
+			padding: 0;
 			-moz-appearance: textfield;
+			border-color: $color__text-meta;
+			border-width: 1px;
+			color: $color__text-main;
 
 			&::-webkit-inner-spin-button,
 			&::-webkit-outer-spin-button {
@@ -21,8 +25,10 @@
 		.subtract {
 			border-radius: 0;
 			border-color: $color__text-meta;
+			border-width: 1px;
 			background: #f9f9f9;
 			float: left;
+			padding: 6px 10px;
 
 			&:hover {
 				background: darken( #f9f9f9, 20%);
