CSS comments change

--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-# Containers
+## Containers
 --------------------------------------------------------------*/
 .container {
 	margin: 0 auto;
@@ -63,10 +63,9 @@
 	.site-main {
 		margin: 0;
 	}
-
 }
 
 /*--------------------------------------------------------------
-# Page Settings
+## Page Settings
 --------------------------------------------------------------*/
 @import "page-settings";
