--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,7 +43,7 @@ Tags: one column, two columns, custom-background, custom-colors, custom-header, 
 ----------------------------------------------------------------
 Please don't edit below, changes will be lost during the theme 
 update process. If you need to make CSS modifications try
-https://wordpress.org/plugins/so-css/
+https://wordpress.org/plugins/so-css/.
 --------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
